# crash_amethyst_investigation

./: .gitignore  Cargo.toml  README.md
assets/map/: bridge.json
assets/prefab/: game_ui.ron  main_menu_ui.ron  scene.ron
config/: bindings.ron  display.ron
src/: grid.rs  main.rs  texture_loader.rs
src/states/: game_state.rs  main_menu_state.rs  mod.rs
src/systems/: camera_system.rs  mod.rs
