[package]
name = "carash_investigation"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
#amethyst = "0.15.0"
amethyst = { path = "../amethyst" }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
serde_repr = "0.1"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

[profile.dev]
debug = 2
lto = false